add html template basic css and js

--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "javascript",
     "webdev"
   ],
-  "author": "webkid.io",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/wbkd/webpack-starter/issues"
-  },
+  "author": "Ron Lipps",
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
